# SPDX-License-Identifier: Apache-2.0
[package]
name = "cljvindent-emacs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/narocath/cljvindent-emacs"

[lib]
name = "cljvindent"
crate-type = ["cdylib"]

[dependencies]
cljvindent-core = "0.1.1"
tracing = {version = "0.1.44", features = ["attributes"]}
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
emacs = {version = "0.21.0"}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[workspace]
